updated tab-1 content with minor edits

--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -33,7 +33,7 @@ why_choose_us_section:
       bullets:
         -
           - Inefficiencies in your current environment, e.g. technical debt.
-          - How to modernize it to be more efficient, empowering growth.
+          - How to modernize to be more efficient, empowering growth.
         -
           - How to leverage the Cloud to support your competitive edge.
           - How to optimise your technology infrastructure for infinite scale.
