--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -24,12 +24,12 @@ why_choose_us_section:
       div_class: tab-pane fade show active
       title: Cost of Ownership
       summary: Leverage the Cloud to reduce fixed costs and focus on value creation.
-      tagline: The Cloud can rapidly reduce your CapEx <span class="underline">and</span> OpEx, but there’s more to it than just "well-oiled machinery".
-      text: "We help you truly appreciate the benefits of the Cloud and how to align your business to take advantage of them. We'll help you address:"
-      image1_src: ./assets/img/photos/about2.jpg
-      image1_srcset: ./assets/img/photos/about2@2x.jpg 2x
-      image2_src: ./assets/img/photos/about3.jpg
-      image2_srcset: ./assets/img/photos/about3@2x.jpg 2x
+      tagline: Cloud adoption can rapidly reduce your CapEx <span class="underline">and</span> OpEx, but there’s more to it than just "well-oiled machinery".
+      text: "To truly appreciate the benefits of the Cloud, it's important to align your business to take advantage of them. We'll help you address:"
+      image1_src: ./assets/img/photos/about7.jpg
+      image1_srcset: ./assets/img/photos/about3@2x.jpg 2x
+      image2_src: ./assets/img/photos/home/cost-of-ownership-1.jpg
+      image2_srcset: ./assets/img/photos/home/cost-of-ownership-1.jpg 2x
       bullets:
         -
           - Inefficiencies in your current environment, e.g. technical debt.
