--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -46,19 +46,19 @@ why_choose_us_section:
       div_class: tab-pane fade
       title: Operational Efficiency
       summary: Rapidly and reliably build products and manage operations at scale.
-      tagline: We are a digital and branding company that believes in the power of creative strategy and along with great design.
-      text: Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+      tagline: Execute workloads efficiently, obtain valuable operational insights, and continuously refine operations to deliver value.
+      text: "To achieve operational efficiency, it's essential to understand your workloads and their operating behaviours in detail. We'll help you:"
       image1_src: ./assets/img/photos/home/operational-efficiency-2a.jpg
       image1_srcset: ./assets/img/photos/home/operational-efficiency-2a.jpg 2x
       image2_src: ./assets/img/photos/home/operational-efficiency-1.jpg
       image2_srcset: ./assets/img/photos/home/operational-efficiency-1.jpg 2x
       bullets:
         -
-          - Aenean eu leo quam ornare curabitur blandit tempus.
-          - Nullam quis risus eget urna mollis ornare donec elit.
+          - Design and instrument your workloads to provide telemetry and situational awareness.
+          - Develop approaches for safe production deployments with rapid remediation of issues.
         -
-          - Etiam porta sem malesuada magna mollis euismod.
-          - Fermentum massa vivamus faucibus amet euismod.
+          - Evaluate your operational readiness, using Cloud tooling for reproducible issue resolution.
+          - Use "operations as code" to develop consistent workload and operations procedures.
     -
       id: tab-3
       a_class: nav-link d-flex flex-row
