updated includes and markdown to fix path errors

--- a/_data/pageconfig/navigation.yml
+++ b/_data/pageconfig/navigation.yml
@@ -336,7 +336,7 @@
       enabled: true
     -
       name: The Team
-      url: "#meet-the-team"
+      url: "meet-the-team"
       enabled: true
     -
       name: Careers
