--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,23 @@
 exclude:
   - .jekyll-cache
 
-title: AxOps Technology Services
+url: http://localhost:4000
+title: AxOps Technologies
 tagline: "pending"
 description: "pending"
 
-nav_logo: ./assets/img/axops-134x26.png
-nav_logo2x: ./assets/img/axops-134x26@2x.png 2x
+nav_logo: &url /assets/img/axops-134x26.png
+nav_logo2x: &url /assets/img/axops-134x26@2x.png 2x
 
-logo: /assets/img/axops-600x600.png
-favicon: ./assets/img/favicons/favicon-32x32.png
+logo: &url /assets/img/axops-600x600.png
+favicon: &url /assets/img/favicons/favicon-32x32.png
 
 logo_local: 
-    image: /assets/img/axops-600x600.png
+    image: &url /assets/img/axops-600x600.png
     symbol: "&Lambda;"
-    text: "AxOps Technology Services"
+    text: "AxOps Technologies"
 
-url: https://www.axops.tech
+
 
 twitter:
   username: 
