updated site config data

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ exclude:
 
 url: http://localhost:4000
 title: AxOps Technologies
+address: Calle Juan Urbieta, 16, 1ºA, 28007, Madrid - Spain.
+email: holler@axops.tech
 tagline: "pending"
 description: "pending"
 
